# claw-torch

./: .gitmodules  README.md  claw-torch-bindings.asd  claw-torch.asd
bindings/: x86_64-pc-linux-gnu.lisp
example/: example.lisp
src/: claw.lisp  clawed.h
src/lib/: .gitignore  CMakeLists.txt  adapter.x86_64-pc-linux-gnu.cxx  build.sh
